Fixed the find me issue on Safari mac and made some styling changes

--- a/SnapThatLaterWebApp/src/app/camera/camera.component.css
+++ b/SnapThatLaterWebApp/src/app/camera/camera.component.css
@@ -5,3 +5,7 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+.camera-buttons {
+  padding: 5px;
+}
